# exptbimanual

./: MANIFEST.in  Makefile  README.md  pyproject.toml
exptbimanual/: apputils.py  main.py  propdict.py  pygame_utils.py  resource.py  task_main.py  task_setup.py  version.py
exptbimanual/exptsys/: __init__.py  block.py  experiment.py  keyboardsurface.py  pygame_utils.py  response.py  runner.py  stimulus.py  trial.py  trialevent.py
exptbimanual/task/: goodbye.py  overview_instructions.py  practice.py  practice_instructions.py  task_schedule.py  task_setup.py
